--- a/src/app/subject/student-list.component.html
+++ b/src/app/subject/student-list.component.html
@@ -1,1 +1,25 @@
-<h1>student list test</h1>
+<h1>Student partially enrolled in subjectName   </h1>
+<!-- <p>{{ account.firstName }}</p>
+<p>{{ account.id }}</p> -->
+
+<!-- <p>id of this subject: {{ id }}</p> -->
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th style="width: 30%">First Name</th>
+      <th style="width: 30%">Last Name</th>
+      <th style="width: 10%;">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>kurt</td>
+      <td>gwapo</td>
+    </tr>
+    <tr>
+      <td>kurt</td>
+      <td>gwapo</td>
+    </tr>
+  </tbody>
+</table>
