--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,11 +105,13 @@
         } : {}
     "
   >
-    <!-- subnav router outlet -->
-    <!-- <router-outlet name="subnav"></router-outlet> -->
+    
 
     <!-- global alert -->
     <alert></alert>
+
+    <!-- breadcrumb router outlet -->
+    <router-outlet name="breadcrumb"></router-outlet>
 
     <!-- main router outlet -->
     <router-outlet></router-outlet>
