--- a/src/app/subject/layout.component.html
+++ b/src/app/subject/layout.component.html
@@ -1,6 +1,5 @@
-<div class="p-4">
-    <div class="container">
-       
+<div class="py-2 px-4">
+    <!-- <div class="container"> -->
         <router-outlet></router-outlet>
-    </div>
+    <!-- </div> -->
 </div>
