--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,10 +109,10 @@
 
     <!-- global alert -->
     <alert></alert>
-
-    <!-- breadcrumb router outlet -->
-    <router-outlet name="breadcrumb"></router-outlet>
-
+    
+    <breadcrumb-nav />
+    
+    
     <!-- main router outlet -->
     <router-outlet></router-outlet>
   </div>
