--- a/src/app/subject/layout.component.html
+++ b/src/app/subject/layout.component.html
@@ -1,5 +1,7 @@
 <div class="py-2 px-4">
-    <!-- <div class="container"> -->
+        <subject-information />
+
+                <!-- <subnav/>        -->
+        
         <router-outlet></router-outlet>
-    <!-- </div> -->
 </div>
