--- a/src/app/subject/student-list.component.html
+++ b/src/app/subject/student-list.component.html
@@ -1,25 +1,24 @@
-<h1>Student partially enrolled in subjectName </h1>
+<!-- <h1>Student partially  </h1> -->
 
-<form (ngSubmit)="submitEnrollmentDecisions()">
-  
+<form (ngSubmit)="submitEnrollmentDecisions()" class="py-4">
+  <h3>Students partially enrolled in this subject</h3>
   <table class="table table-hover table-sm"> 
     <thead>
       <tr>
-       
         <th style="width: 10%;"><input type="checkbox" [(ngModel)]="selectAll" (change)="toggleSelectAll()" name="selectAll" /></th>
-        <th style="width: 5%;">id</th>
-        <th style="width: 40%">First Name</th>
-        <th style="width: 40%">Last Name</th>
+        <th style="width: 10%;">Enrollment Id</th>
+        <th style="width: 40%">Lastname</th>
+        <th style="width: 40%">Firstname</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let student of students; let i = index">
         <td>
           <input type="checkbox" [(ngModel)]="student.selected" name="selected{{i}}" />
-        </td>
+        </td> 
         <td>{{ student.enrollment_id }}</td>
-        <td>{{ student.firstName }}</td>
         <td>{{ student.lastName }}</td>
+        <td>{{ student.firstName }}</td>
       </tr>
     </tbody>
   </table>
