--- a/src/app/subject/subject-list.component.html
+++ b/src/app/subject/subject-list.component.html
@@ -3,7 +3,7 @@
 <table class="table table-hover table-sm">
   <thead>
     <tr>
-      <th style="width:5%;">ID</th>
+      <th style="width:5%;">#</th>
       <th style="width:20%">Subject Title</th>
       <th style="width:10%">School Year</th>
       <th style="width:5%">Level</th>
@@ -22,8 +22,8 @@
       <td>{{ a.semester }}</td>
       <td>
         <div class="d-flex p-1 gap-1">
-          <a [routerLink]="['./grading-summary', a.id]" routerLinkActive="active" class="btn btn-sm btn-primary">ECR</a>
-          <a [routerLink]="['./students', a.id]" routerLinkActive="active" class="btn btn-sm btn-success">View Students</a>
+          <a [routerLink]="['./', a.id]" routerLinkActive="active" class="btn btn-sm btn-primary">ECR</a>
+          <a [routerLink]="['./students', a.id]" routerLinkActive="active" class="ml-1 btn btn-sm btn-success">View Students</a>
         </div>
       </td>
     </tr>
