--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -110,7 +110,7 @@
     <!-- global alert -->
     <alert></alert>
     
-    <breadcrumb-nav />
+    <breadcrumb-nav *ngIf="account" />
     
     
     <!-- main router outlet -->
