--- a/src/app/subject/ECR/subnav.component.html
+++ b/src/app/subject/ECR/subnav.component.html
@@ -23,9 +23,9 @@
       FIRST QUARTER
     </a>
     <div class="dropdown-menu" aria-labelledby="firstQuarter">
-      <a class="dropdown-item" routerLink="/1st-quarter/written-work" routerLinkActive="active">Written Work</a>
+      <a class="dropdown-item" routerLink="1st-quarter/written-work" routerLinkActive="active">Written Work</a>
       <a class="dropdown-item" routerLink="/1st-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
-      <a class="dropdown-item" routerLink="/1st-quarter/quarterly-exam" routerLinkActive="active">Quarterly Examination</a>
+      <a class="dropdown-item" routerLink="/1st-quarter/quarterly-exam" routerLinkActive="active">Quarterly Assessment</a>
     </div>
   </li>
 
@@ -43,7 +43,7 @@
     <div class="dropdown-menu" aria-labelledby="secondQuarter">
       <a class="dropdown-item" routerLink="/2nd-quarter/written-work" routerLinkActive="active">Written Work</a>
       <a class="dropdown-item" routerLink="/2nd-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
-      <a class="dropdown-item" routerLink="/2nd-quarter/quarterly-exam" routerLinkActive="active">Quarterly Examination</a>
+      <a class="dropdown-item" routerLink="/2nd-quarter/quarterly-exam" routerLinkActive="active">Quarterly Assessment</a>
     </div>
   </li>
 </ul>
