--- a/src/app/subject/ECR/quarterly-grade-sheet.component.html
+++ b/src/app/subject/ECR/quarterly-grade-sheet.component.html
@@ -1,6 +1,5 @@
-<table class="table table-bordered table-hover table-sm">
+<!-- <table class="table table-bordered table-hover table-sm">
   <thead>
-    <!-- Group Headings Row -->
     <tr>
       <th class="text-center" colspan="2">STUDENTS</th>
       <th class="text-center" colspan="3">PERCENTAGE SCORES</th>
@@ -8,7 +7,6 @@
       <th colspan="2"></th>
     </tr>
 
-    <!-- Actual Column Titles -->
     <tr>
       <th style="width: 20%;">Lastname</th>
       <th style="width: 20%;">Firstname</th>
@@ -31,19 +29,20 @@
       <td>{{ student.lastName }}</td>
       <td>{{ student.firstName }}</td>
 
-      <!-- PERCENTAGE SCORES -->
       <td class="text-center">{{ student.percentageScore }}</td>
       <td class="text-center">89</td>
       <td class="text-center">90</td>
 
-      <!-- WEIGHTED SCORES -->
       <td class="text-center">{{ student.weightedScore }}</td>
       <td class="text-center">89</td>
       <td class="text-center">90</td>
 
-      <!-- FINAL GRADES -->
       <td class="text-center">10</td>
       <td class="text-center">89</td>
     </tr>
   </tbody>
-</table>
+</table> -->
+
+
+
+<p>quarter right neow: {{ quarter }}</p>
