--- a/src/app/subject/ECR/subnav.component.html
+++ b/src/app/subject/ECR/subnav.component.html
@@ -24,8 +24,8 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="firstQuarter">
       <a class="dropdown-item" routerLink="1st-quarter/written-work" routerLinkActive="active">Written Work</a>
-      <a class="dropdown-item" routerLink="/1st-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
-      <a class="dropdown-item" routerLink="/1st-quarter/quarterly-exam" routerLinkActive="active">Quarterly Assessment</a>
+      <a class="dropdown-item" routerLink="1st-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
+      <a class="dropdown-item" routerLink="1st-quarter/quarterly-assessment" routerLinkActive="active">Quarterly Assessment</a>
     </div>
   </li>
 
@@ -33,7 +33,7 @@
   <li class="nav-item dropdown flex-grow-1 text-center">
     <a 
       class="nav-link dropdown-toggle" 
-      routerLink="/2nd-quarter" 
+      routerLink="2nd-quarter" 
       routerLinkActive="active" 
       id="secondQuarter"
       role="button"
@@ -41,9 +41,9 @@
       SECOND QUARTER
     </a>
     <div class="dropdown-menu" aria-labelledby="secondQuarter">
-      <a class="dropdown-item" routerLink="/2nd-quarter/written-work" routerLinkActive="active">Written Work</a>
-      <a class="dropdown-item" routerLink="/2nd-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
-      <a class="dropdown-item" routerLink="/2nd-quarter/quarterly-exam" routerLinkActive="active">Quarterly Assessment</a>
+      <a class="dropdown-item" routerLink="2nd-quarter/written-work" routerLinkActive="active">Written Work</a>
+      <a class="dropdown-item" routerLink="2nd-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
+      <a class="dropdown-item" routerLink="2nd-quarter/quarterly-assessment" routerLinkActive="active">Quarterly Assessment</a>
     </div>
   </li>
 </ul>
