--- a/src/app/subject/ECR/quarterly-grade-sheet.component.html
+++ b/src/app/subject/ECR/quarterly-grade-sheet.component.html
@@ -1,4 +1,4 @@
-<!-- <table class="table table-bordered table-hover table-sm">
+<table class="table table-bordered table-hover table-sm">
   <thead>
     <tr>
       <th class="text-center" colspan="2">STUDENTS</th>
@@ -41,7 +41,7 @@
       <td class="text-center">89</td>
     </tr>
   </tbody>
-</table> -->
+</table>
 
 
 
