--- a/src/app/subject/ECR/subnav.component.html
+++ b/src/app/subject/ECR/subnav.component.html
@@ -15,7 +15,7 @@
   <li class="nav-item dropdown flex-grow-1 text-center">
     <a 
       class="nav-link dropdown-toggle" 
-      routerLink="1st-quarter" 
+      routerLink="First Quarter" 
       routerLinkActive="active" 
       id="firstQuarter" 
       role="button"
@@ -23,9 +23,9 @@
       FIRST QUARTER
     </a>
     <div class="dropdown-menu" aria-labelledby="firstQuarter">
-      <a class="dropdown-item" routerLink="1st-quarter/written-work" routerLinkActive="active">Written Work</a>
-      <a class="dropdown-item" routerLink="1st-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
-      <a class="dropdown-item" routerLink="1st-quarter/quarterly-assessment" routerLinkActive="active">Quarterly Assessment</a>
+      <a class="dropdown-item" routerLink="First Quarter/Written Work" routerLinkActive="active">Written Work</a>
+      <a class="dropdown-item" routerLink="First Quarter/Performance Tasks" routerLinkActive="active">Performance Tasks</a>
+      <a class="dropdown-item" routerLink="First Quarter/Quarterly Assesment" routerLinkActive="active">Quarterly Assessment</a>
     </div>
   </li>
 
@@ -33,7 +33,7 @@
   <li class="nav-item dropdown flex-grow-1 text-center">
     <a 
       class="nav-link dropdown-toggle" 
-      routerLink="2nd-quarter" 
+      routerLink="Second Quarter" 
       routerLinkActive="active" 
       id="secondQuarter"
       role="button"
@@ -41,9 +41,9 @@
       SECOND QUARTER
     </a>
     <div class="dropdown-menu" aria-labelledby="secondQuarter">
-      <a class="dropdown-item" routerLink="2nd-quarter/written-work" routerLinkActive="active">Written Work</a>
-      <a class="dropdown-item" routerLink="2nd-quarter/performance-tasks" routerLinkActive="active">Performance Tasks</a>
-      <a class="dropdown-item" routerLink="2nd-quarter/quarterly-assessment" routerLinkActive="active">Quarterly Assessment</a>
+      <a class="dropdown-item" routerLink="Second Quarter/Written Work" routerLinkActive="active">Written Work</a>
+      <a class="dropdown-item" routerLink="Second Quarter/Performance Tasks" routerLinkActive="active">Performance Tasks</a>
+      <a class="dropdown-item" routerLink="Second Quarter/Quarterly Assesment" routerLinkActive="active">Quarterly Assessment</a>
     </div>
   </li>
 </ul>
