--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,27 @@
 <div class="app-container d-flex" [ngClass]="{ 'bg-light': account }">
   <!-- main nav -->
   <nav
-    class="text-white sidebar p-3 vh-100 flex-shrink-0"
+    class="text-white sidebar p-3 vh-100"
+    style="
+    width: 200px;
+    background-color: rgb(0, 0, 70);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 1000;
+    overflow-y: auto;"
     *ngIf="account"
-    style="width: 200px; background-color: rgb(0, 0, 70);"
   >
     <div class="mt-2 mb-4 text-center">
       <h4
         class="fw-bold"
         style="letter-spacing: 1px; cursor: pointer"
-        routerLink="/"
+        routerLink="/"  
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
-        SENIOR HIGH GRADING SYSTEM
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-talWhvqHshpEQw5Kf10LV9vno1j6fbwWUQ&s" width="100" alt="">
       </h4>
     </div>
     <ul class="nav flex-column">
@@ -94,6 +102,7 @@
 
   <div
     class="flex-grow-1"
+    style="margin-left: 200px; padding: 1rem;"
     [ngStyle]="!account 
       ? 
       {
