--- a/src/app/subject/ECR/final-semester-grade-sheet.component.html
+++ b/src/app/subject/ECR/final-semester-grade-sheet.component.html
@@ -5,7 +5,6 @@
       <th style="width: 20%;">Firstname</th>
       <th style="width: 5%" class="text-center">First Quarter</th>
       <th style="width: 5%" class="text-center">Second Quarter</th>
-      <th style="width: 5%" class="text-center">Average</th>
       <th style="width: 5%" class="text-center">Final Grade</th>
       <th style="width: 10%" class="text-center">Remarks</th>
       <th style="width: 20%" class="text-center">Description</th>
@@ -15,15 +14,17 @@
     <tr *ngIf="students?.length === 0">
       <td colspan="8" class="text-center text-muted">No students enrolled yet boii.</td>
     </tr>
-    <tr *ngFor="let student of students">
+    <tr *ngFor="let student of students"> 
       <td>{{ student.lastName }}</td>
       <td>{{ student.firstName }}</td>
-      <td class="text-center"></td>
-      <td class="text-center"></td>
-      <td class="text-center"></td>
-      <td class="text-center"></td>
-      <td class="text-center text-danger font-weight-bold">Failed</td>
-      <td class="text-center">Did Not Meet Expectations</td>
+      <td class="text-center">{{ student.firstQuarter }}</td>
+      <td class="text-center">{{  student.secondQuarter }}</td>
+      <td class="text-center">{{ student.average }}</td>
+      <td class="text-center font-weight-bold"  [ngClass]="{
+      'text-success': student.remarks === 'PASSED',
+      'text-danger': student.remarks === 'FAILED'
+    }">{{ student.remarks }}</td>
+      <td class="text-center">{{ student.description }}</td>
     </tr>
   </tbody>
 </table>
