--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,9 +101,9 @@
   ></div>
 
   <div
-    class="flex-grow-1"
-    style="margin-left: 200px; padding: 1rem;"
-    [ngStyle]="!account 
+    class="flex-grow-1 background"
+    style="padding: 1rem;"
+    [ngStyle]="!account   
       ? 
       {
           'background-image':
@@ -111,7 +111,9 @@
           'background-size': 'cover',
           'background-position': 'center',
           'background-repeat': 'no-repeat'
-        } : {}
+        } : {
+          'margin-left': '200px'  
+        }
     "
   >
     
