--- a/src/app/subject/ECR/final-semester-grade-sheet.component.html
+++ b/src/app/subject/ECR/final-semester-grade-sheet.component.html
@@ -1,3 +1,12 @@
+
+<div class="w-100 d-flex justify-content-end my-3">
+  <button class="btn btn-sml btn-primary" (click)="printGradeSheet()">Print Grade</button>
+</div>
+
+<div id="print-header" class="mb-4">
+  <h3 class="text-center">Semestral Final Grade</h3>
+</div>
+
 <table class="table table-bordered table-hover table-sm">
   <thead>
     <tr>
@@ -28,3 +37,7 @@
     </tr>
   </tbody>
 </table>
+
+<div class="teacher-name">
+  Subject Teacher: <strong> {{ account.firstName }} {{ account.lastName }} </strong>
+</div>
