--- a/src/app/subject/ECR/quarterly-grade-sheet.component.html
+++ b/src/app/subject/ECR/quarterly-grade-sheet.component.html
@@ -1,3 +1,12 @@
+
+<div class="w-100 d-flex justify-content-end my-3">
+  <button class="btn btn-sml btn-primary" (click)="printGradeSheet()">Print Grade</button>
+</div>
+
+<div id="print-header" class="mb-4">
+  <h3 class="text-center">{{ quarter }} Grade Sheet</h3>
+</div>
+
 <table class="table table-bordered table-hover table-sm">
   <thead>
     <tr>
@@ -11,16 +20,16 @@
       <th style="width: 20%;">Lastname</th>
       <th style="width: 20%;">Firstname</th>
 
-      <th class="text-center" style="width: 10%;">WRITTEN WORK</th>
-      <th class="text-center" style="width: 10%;">PERFORMANCE TASKS</th>
-      <th class="text-center" style="width: 10%;">QUARTERLY ASSESSMENT</th>
+      <th class="text-center" style="width: 5%;">WRITTEN WORK</th>
+      <th class="text-center" style="width: 5%;">PERFORMANCE TASKS</th>
+      <th class="text-center" style="width: 5%;">QUARTERLY ASSESSMENT</th>
 
-      <th class="text-center" style="width: 10%;">WRITTEN WORK</th>
-      <th class="text-center" style="width: 10%;">PERFORMANCE TASKS</th>
-      <th class="text-center" style="width: 10%;">QUARTERLY ASSESSMENT</th>
+      <th class="text-center" style="width: 5%;">WRITTEN WORK</th>
+      <th class="text-center" style="width: 5%;">PERFORMANCE TASKS</th>
+      <th class="text-center" style="width: 5%;">QUARTERLY ASSESSMENT</th>
 
-      <th class="text-center" style="width: 10%;">INITIAL GRADE</th>
-      <th class="text-center" style="width: 10%;">TRANSMUTED GRADE</th>
+      <th class="text-center" style="width: 5%;">INITIAL GRADE</th>
+      <th class="text-center" style="width: 5%;">TRANSMUTED GRADE</th>
     </tr>
   </thead>
 
@@ -42,3 +51,7 @@
     </tr>
   </tbody>
 </table>
+
+<div class="teacher-name">
+  Subject Teacher: <strong> {{ account.firstName }} {{ account.lastName }} </strong>
+</div>
