--- a/src/app/subject/ECR/subnav.component.html
+++ b/src/app/subject/ECR/subnav.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs rounded-0 py-4">
+<ul class="nav nav-tabs rounded-0 py-4 subnav">
   <!-- GRADES TAB -->
   <li class="nav-item flex-grow-1 text-center">
     <a 
@@ -30,7 +30,7 @@
   </li>
 
   <!-- SECOND QUARTER DROPDOWN -->
-  <li class="nav-item dropdown flex-grow-1 text-center">
+  <li class="nav-item dropdown flex-grow-1 text-center">  
     <a 
       class="nav-link dropdown-toggle" 
       routerLink="Second Quarter" 
@@ -47,3 +47,4 @@
     </div>
   </li>
 </ul>
+
