--- a/src/app/subject/subject-list.component.html
+++ b/src/app/subject/subject-list.component.html
@@ -23,7 +23,7 @@
       <td>
         <div class="d-flex p-1 gap-1">
           <a [routerLink]="['./', a.id]" routerLinkActive="active" class="btn btn-sm btn-primary">ECR</a>
-          <a [routerLink]="['./students', a.id]" routerLinkActive="active" class="ml-1 btn btn-sm btn-success">View Students</a>
+          <a [routerLink]="['./students', a.id]" routerLinkActive="active" class="ml-1 btn btn-sm btn-success">Data Sheet</a>
         </div>
       </td>
     </tr>
