--- a/src/app/subject/student-list.component.html
+++ b/src/app/subject/student-list.component.html
@@ -5,10 +5,14 @@
   <table class="table table-hover table-sm"> 
     <thead>
       <tr>
-        <th style="width: 10%;"><input type="checkbox" [(ngModel)]="selectAll" (change)="toggleSelectAll()" name="selectAll" /></th>
+        <th style="width: 5%;"><input type="checkbox" [(ngModel)]="selectAll" (change)="toggleSelectAll()" name="selectAll" /></th>
         <!-- <th style="width: 10%;">Enrollment Id</th> -->
-        <th style="width: 40%">Lastname</th>
-        <th style="width: 40%">Firstname</th>
+        <th style="width: 20%">Lastname</th>
+        <th style="width: 20%">Firstname</th>
+        <th style="width: 5%">Sex</th>
+        <th style="width: 20%">Address</th>
+        <th style="width: 20%">Name of Guardian</th>
+        <th style="width: 20%">Contact Number</th>
       </tr>
     </thead>
     <tbody>
@@ -19,6 +23,10 @@
         <!-- <td>{{ student.enrollment_id }}</td> -->
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName }}</td>
+        <td>{{ student.sex }}</td>
+        <td>{{ student.address }}</td>
+        <td>{{ student.guardian_name }}</td>
+        <td>{{ student.guardian_contact }}</td>
       </tr>
     </tbody>
   </table>
